First bash at styling and some body copy

--- a/index.html
+++ b/index.html
@@ -1,4 +1,53 @@
+<!DOCTYPE html>
 <html>
-<head><title>York LockSoc</title></head>
-<body>Hello, world!</body>
-</hmtl>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+        <link href="styles.css" rel="stylesheet" type="text/css"/>
+        <title>LockSoc</title>
+    </head>
+    <body>
+        <div id="container">
+            <header>
+                <h1><a href="/" title="LockSoc">LockSoc</a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="meetups.html">Meeting Times</a></li>
+                        <li><a href="reading.html">Reading Materials</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div id="page-content">
+                <h2>About LockSoc</h2>
+                <h3>Who are we?</h3>
+                <p>We are a group of people at The University of York, UK who 
+                enjoy exploring and defeating locks that we own.</p>
+                <h3>What do we do?</h3>
+                <p>A typical meetup will have us picking locks of varying 
+                difficulties, as well as talking about all aspects of security.
+                </p>
+                <p>During each term, we also host events, from talks and 
+                instructional workshops, to friendly competitions and even the
+                odd social.</p>
+                <h3>Committee</h3>
+                <p>LockSoc is a newly formed society, and does not as yet have 
+                any formal comittee</p>
+                <p>A committee will be elected shortly. If you are interested
+                in running for a position, please contact us.</p>
+                <h4>Positions</h4>
+                <p>As per YUSU rules, there will be at least 3 positions 
+                available in the society:</p>
+                <ul>
+                    <li>Chair</li>
+                    <li>Secretary</li>
+                    <li>Treasurer</li>
+                </ul>
+                <p>There is also likely to be scope for other positions, for 
+                example, we will likely need someone to deal with all aspects
+                of the society's equipment.</p>
+            </div>
+        </div>
+    </body>
+</html>
