Added an extra link in the menu, better syling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                         <li><a href="index.html">About</a></li>
                         <li><a href="meetups.html">Meeting Times</a></li>
                         <li><a href="reading.html">Reading Materials</a></li>
+                        <li><a href="ethics.html">Ethics</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </nav>
