--- a/ethics.html
+++ b/ethics.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'/>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
         <title>Ethics -- LockSoc</title>
     </head>
@@ -25,7 +25,7 @@
                 <p>Our ethical policy is quite simple, and follows that of many 
                 existing locksport and lockpicking organisations, such as <a 
                     href="https://toool.org.uk">The Open Organisation Of 
-                    Lockpickers</a>.
+                    Lockpickers</a>.</p>
                 <ol>
                     <li>Be mindful of the consequences of your actions. This 
                     includes how your actions may appear to those who are not
