--- a/meetups.html
+++ b/meetups.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'/>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
         <title>Meetups -- LockSoc</title>
     </head>
@@ -24,7 +24,7 @@
                 <h2>Meetups</h2>
                 <h3>Time</h3>
                 <p>We currently meetup on Thursday evenings, typically between
-                19:00 and 20:00.<p>
+                19:00 and 20:00.</p>
                 <h3>Location</h3>
                 <p>Unfortunately, we're not yet a YUSU society, and therefore 
                 do not have a specific location for meeting. We typically meet 
