--- a/reading.html
+++ b/reading.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville:400,700' rel='stylesheet' type='text/css'/>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
         <title>Reading Materials -- LockSoc</title>
     </head>
